--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 .cache/
 *.lock
 
-# IDE
-.vscode/
-.idea/
 
 # OS
 .DS_Store
@@ -17,3 +14,24 @@ node_modules/
 # Build artifacts
 dist/
 build/
+# Clarinet
+settings/Devnet.toml
+settings/Mainnet.toml
+.clarinet/
+
+# Node
+node_modules/
+package-lock.json
+
+# Environment
+.env
+.env.local
+.env.*.local
+
+# OS
+.DS_Store
+Thumbs.db
+
+# IDE
+.vscode/
+.idea/
