--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/jadonamite/SEED#readme",
   "dependencies": {
+    "@stacks/transactions": "^7.3.1",
     "@stacks/wallet-sdk": "^7.2.0"
   }
 }
