--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "seed",
   "version": "1.0.0",
+  
   "description": "",
   "main": "index.js",
   "directories": {
@@ -16,13 +17,15 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+ "type": "module",
   "bugs": {
     "url": "https://github.com/jadonamite/SEED/issues"
   },
   "homepage": "https://github.com/jadonamite/SEED#readme",
   "dependencies": {
+    "@stacks/network": "^7.3.1",
     "@stacks/transactions": "^7.3.1",
-    "@stacks/wallet-sdk": "^7.2.0"
+    "@stacks/wallet-sdk": "^7.2.0",
+    "dotenv": "^17.2.3"
   }
 }
