Downgrading to NextJS14 for compatibility

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@stacks/network": "^6.13.0",
     "@stacks/transactions": "^6.15.0",
     "@stacks/wallet-sdk": "^7.2.0",
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "framer-motion": "^10.18.0"
   }
 }
